--- a/debian/postinst.in
+++ b/debian/postinst.in
@@ -299,6 +299,13 @@ running_in_container()
   type systemd-detect-virt >/dev/null 2>&1 && systemd-detect-virt --quiet --container
 }
 
+no_nvram_arg() {
+    db_get grub2/update_nvram
+    if [ "$RET" = false ]; then
+        echo "--no-nvram"
+    fi
+}
+
 run_grub_install()
 {
     if ! grub-install $@ ; then
@@ -373,6 +380,15 @@ case "$1" in
           sed -i -e 's/^GRUB_HIDDEN_TIMEOUT=/#&/' "$tmp_default_grub"
         fi
       ;;
+      grub-ieee1275)
+        if grep ^platform /proc/cpuinfo | grep -q PowerNV; then
+		cat <<-EOF >>"$tmp_default_grub"
+
+		# Disable os-prober for ppc64el on the PowerNV platform (for Petitboot)
+		GRUB_DISABLE_OS_PROBER=true
+		EOF
+        fi
+        ;;
     esac
 
     ucf --three-way --debconf-ok --sum-file=/usr/share/grub/default/grub.md5sum ${tmp_default_grub} /etc/default/grub
@@ -686,6 +702,13 @@ case "$1" in
         case $bootloader_id in
           kubuntu) bootloader_id=ubuntu ;;
         esac
+
+        if dpkg --compare-versions "$2" lt-nl 2.02~beta2-36ubuntu3.10; then
+          if [ -e "/boot/efi/EFI/${bootloader_id}/fbx64.efi" ]; then
+            rm -f "/boot/efi/EFI/${bootloader_id}/fbx64.efi";
+          fi
+        fi
+
         if [ "$bootloader_id" ] && [ -d "/boot/efi/EFI/$bootloader_id" ]; then
           case @PACKAGE@ in
             grub-efi-ia32)  target=i386-efi ;;
@@ -698,7 +721,8 @@ case "$1" in
           if [ "$RET" = true ]; then
             FORCE_EXTRA_REMOVABLE="--force-extra-removable"
           fi
-          run_grub_install --target="$target" "$FORCE_EXTRA_REMOVABLE"
+          NO_NVRAM="$(no_nvram_arg)"
+          run_grub_install --target="$target" "$FORCE_EXTRA_REMOVABLE" "$NO_NVRAM"
         fi
 
         # /boot/grub/ has more chances of being accessible by GRUB
@@ -720,7 +744,8 @@ case "$1" in
             # Output may be empty; if so, just update the core image but
             # don't install it to any PReP partition.
             prep_bootdev="$(/usr/lib/grub/powerpc-ieee1275/prep-bootdev)"
-            run_grub_install --target=powerpc-ieee1275 $prep_bootdev
+            NO_NVRAM="$(no_nvram_arg)"
+            run_grub_install --target=powerpc-ieee1275 $prep_bootdev "$NO_NVRAM"
           ;;
         esac
       ;;
